[package]
name = "opendrive_kit_core"
version.workspace = true
license.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
uom = { version = "0.36.0",default-features = false, features = ["f64", "si", "std"] }
vec1 = "1.12.1"
quick-xml = { version = "0.29", optional = true ,features = ["serde-types", "serialize"]}
serde = { version = "1.0.217", optional = true }

[features]
default = ["quick-xml"]  # Default build does not include quick-xml
quick-xml = ["dep:quick-xml","dep:serde"]  # Enables XML parsing support

